Fix handling of resources in halftone filter

BUG:436485